# noise

./: .TODO.md  .gitignore  .gitmodules  LICENSE  Makefile  PKGBUILD  PLAN.md  README.md  README.rst  TODO.md  noise.py  pyproject.toml  setup.py
example/: __init__.py
noise/: __init__.py  boilerplate.py  config.py  hooks.py  page.py  temp  util.py
src/: noise.py
src/noise/: __init__.py  config.py  file.py  helper.py  page.py  path.py  route.py  server.py  template.py  util.py
src/noise/hooks/: __init__.py
tests/: test_integration.py  test_page.py  test_path.py  test_route.py  test_template.py
website/: __init__.py  config.json
