[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "noise"
version = "2.0.0"
description = "A minimal static website generator"
authors = [
    {name = "Ryon Sherman", email = "ryon.sherman@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "jinja2>=3.0",
    "markdown>=3.3",
]

[project.scripts]
noise = "noise:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
